force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/Apttus_Config2__ConfigCustomDisplayColumns__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds information about fields displayed in installed product view, cart view etc</description>
    <label>Config Custom Display Columns</label>
</CustomObject>