force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayType__c</fullName>
    <description>The column display type. 

Valid values are the following

Cart LineItem 
Installed Product</description>
    <inlineHelpText>The column display type. 

Valid values are the following

Cart LineItem 
Installed Product</inlineHelpText>
    <label>Display Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>