force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldName__c</fullName>
    <description>Enter the field API name for the column.</description>
    <inlineHelpText>Enter the field API name for the column.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>