force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__HeaderStyle__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HeaderStyle__c</fullName>
    <description>The style used to display the header of a column, used primarily for adding inline CSS styles.</description>
    <inlineHelpText>The style used to display the header of a column, used primarily for adding inline CSS styles.</inlineHelpText>
    <label>Header Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>