force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__IsEditable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the column allows its value to be edited.</description>
    <inlineHelpText>Indicates whether the column allows its value to be edited.</inlineHelpText>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>