force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__IsPricePoint__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPricePoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine type of a line item for use in Cost &amp; Profitability Price Waterfall

if checked, item is a Price Point. If unchecked, item is an Adjustment.</description>
    <inlineHelpText>Used to determine type of a line item for use in Cost &amp; Profitability Price Waterfall


if checked, item is a Price Point. If unchecked, item is an Adjustment.</inlineHelpText>
    <label>Is Price Point</label>
    <type>Checkbox</type>
</CustomField>