force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__IsSortable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsSortable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the column supports sorting.</description>
    <inlineHelpText>Indicates whether the column supports sorting.</inlineHelpText>
    <label>Is Sortable</label>
    <type>Checkbox</type>
</CustomField>