force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/fields/Apttus_Config2__StyleClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StyleClass__c</fullName>
    <description>Holds the Style classes applied to dynamic columns</description>
    <inlineHelpText>Holds the Style classes applied to dynamic columns</inlineHelpText>
    <label>Style Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>