force-app/main/default/objects/Apttus_Config2__ConfigCustomDisplayColumns__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__Flow__c</columns>
    <columns>Apttus_Config2__FieldName__c</columns>
    <columns>Apttus_Config2__DisplayType__c</columns>
    <columns>Apttus_Config2__HeaderStyle__c</columns>
    <columns>Apttus_Config2__IsEditable__c</columns>
    <columns>Apttus_Config2__IsPricePoint__c</columns>
    <columns>Apttus_Config2__IsSortable__c</columns>
    <columns>Apttus_Config2__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>